--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     /* Fondo pensado para que el libro crema destaque */
     background: radial-gradient(circle at 20% 10%, #2b2f2b, #121312 62%);
     color: #ffffff;
-    overflow-x: hidden;
   }
   .container {
     min-height: 100vh;
@@ -34,6 +33,8 @@
     padding: 40px;
     backdrop-filter: blur(8px);
   }
+  @media (max-width: 860px) {
+    .card { grid-template-columns: 1fr; text-align: center; }
   }
 
   .scene {
@@ -176,30 +177,11 @@
     box-shadow: 0 12px 30px rgba(0,0,0,0.6);
   }
 
-}
 @media (max-width: 860px) {
-  .scene {
-    padding: 12px;
-    overflow: hidden;
-  }
-
   .book3d {
-    width: 260px;
-    height: 390px;
-    transform: none;
-  }
-
-  .spine,
-  .top {
-    display: none;
-  }
-
-  .front {
-    transform: none;
-    box-shadow: 0 20px 50px rgba(0,0,0,0.7);
+    transform: rotateY(-18deg) scale(0.9);
   }
 }
-
 </style>
 </head>
 <body>
